# git-semantic-versioning

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile-alpine  README.md
.github/workflows/: dockerimage.yaml
artefacts/: git_semver-1.2.1-alpine  git_semver-1.2.1-linux  git_semver-1.3.0-alpine  git_semver-1.3.0-linux  git_semver-1.3.1-alpine  git_semver-1.3.1-linux
docs/: release.md
docs/diagrams/: release.puml
include/: semver.h
include/providers/: provider.h
src/: main.cpp  semver.cpp
src/providers/: git2.cpp  provider.cpp
