cmake_minimum_required(VERSION 3.13)
set(CMAKE_GENERATOR make)
set(CMAKE_C_COMPILER clang)
set(CMAKE_CXX_COMPILER clang++)
set(CMAKE_CXX_FLAGS "-Wc++11-extensions -std=c++2a -fno-omit-frame-pointer")
if (CMAKE_BUILD_TYPE MATCHES Debug)
    add_definitions(-DDEBUG=1)
endif()
enable_language(CXX)

project(git-semantic-versioning)
include_directories(include lib/libgit2/include lib/spdlog/include build/lib/gflags/include)
link_directories(${CMAKE_SOURCE_DIR}/lib)

file(GLOB SOURCES "src/*.cpp" "src/**/*.cpp")

if (CMAKE_BUILD_TYPE STREQUAL release)
    option(BUILD_SHARED_LIBS OFF)
    option(BUILD_CLAR OFF)
    option(USE_BUNDLED_ZLIB ON)
    option(USE_HTTPS OFF)
    option(USE_SSH OFF)
endif (CMAKE_BUILD_TYPE STREQUAL release)
add_subdirectory(lib/libgit2)

if (CMAKE_BUILD_TYPE STREQUAL release)
    set(SPDLOG_BUILD_SHARED OFF)
endif (CMAKE_BUILD_TYPE STREQUAL release)
add_subdirectory(lib/spdlog)

set(GFLAGS_BUILD_gflags_nothreads_LIB OFF)
set(BUILD_gflags_LIB ON)
if (CMAKE_BUILD_TYPE STREQUAL release)
    set(GFLAGS_BUILD_SHARED_LIBS OFF)
    set(GFLAGS_BUILD_STATIC_LIBS ON)
endif (CMAKE_BUILD_TYPE STREQUAL release)
add_subdirectory(lib/gflags)

add_executable(git_semver ${SOURCES})
if (CMAKE_BUILD_TYPE STREQUAL release AND UNIX)
    if (APPLE)
        target_link_libraries(git_semver git2 spdlog gflags)
    else ()
        target_link_libraries(git_semver git2 spdlog gflags -static)
    endif ()
else ()
    target_link_libraries(git_semver git2 spdlog gflags)
endif ()
set(TARGET git_semver PROPERTY CXX_STANDARD 20)